# piml-scaling

./: .gitignore  IMPLEMENTATION_CHECKLIST.md  README.md  ROADMAP_EXECUTION_GUIDE.md  ROADMAP_TASK_ALIGNMENT.md  diagnostic_report.json  pyproject.toml  requirements-dev.txt  requirements.txt
configs/: default.yaml  duffing.yaml  pilot.yaml  smoke.yaml  van_der_pol.yaml
dashboard/: app.py
docs/: physics_loss_diagnosis.md  runpod.md  runpod_setup.md
paper/: draft.aux  draft.fdb_latexmk  draft.fls  draft.out  draft.tex
runs-combined/: grouped_metrics.csv  scaling_fits.json
runs-conservation-lambda-sweep/: lambda_sweep_aggregate.csv  lambda_sweep_grouped.csv
runs-dense/: grouped_metrics.csv  runs_aggregate.csv  scaling_fits.json
runs-lambda-sweep/: lambda_sweep_aggregate.csv  lambda_sweep_grouped.csv
runs-pilot/: grouped_metrics.csv  pilot_summary.json  pilot_summary.md  runs_aggregate.csv
runs-progress/: grouped_metrics.csv  runs_aggregate.csv  scaling_fits.json
runs-simpson/: grouped_metrics.csv  runs_aggregate.csv
runs-sweep-smoke/: grouped_metrics.csv  pilot_summary.json  pilot_summary.md  runs_aggregate.csv
scripts/: aggregate_runs.py  analyze_lambda_sweep.py  analyze_pilot.py  auto_refresh_progress.py  diagnose_physics.py  fit_scaling.py  generate_datasets.py  generate_figures.py  generate_lambda_figures.py  generate_trajectory_datasets.py  launch_parallel.sh  merge_grouped_metrics.py  plot_gradient_dynamics.py  run_all_gpu.sh  run_experiment.py  run_horizon_sweep.py  run_lambda_sweep.py  run_rescue_sweep.py  run_sweep.py  run_task_alignment.sh  (+6 more)
(+3098 files in other folders)
