[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scaling-piml"
version = "0.1.0"
description = "Empirical scaling laws for physics-informed priors in a minimal SciML setting (Lotka–Volterra)."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Lucas Perrier"}]
dependencies = [
  "numpy>=1.24",
  "scipy>=1.10",
  "torch>=2.1",
  "pyyaml>=6.0",
  "tqdm>=4.66",
  "pandas>=2.0",
  "matplotlib>=3.7",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
  "ruff>=0.3",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B"]
